--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form action="/" method="POST">
         <label id=input>CityName</label>
         <input type="text" name="cityName">
-        <button type="submit">Go</button>
+        <button type="submit">Click</button>
 
     </form>
 </body>
